# aescrypt-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.cursor/plans/: replace_all_raw_arrays_with_secure-gate_types_in_encryptor_module_91b375f0.plan.md
.github/workflows/: fuzz.yml
benches/: batch.rs  decrypt.rs  encrypt.rs  iterations.rs  kdf.rs  roundtrip.rs
docs/: aescrypt_decryption_logic.md  aescryypt_logic_01.md  aescryypt_logic_02.md  stream_format_enhanced.md
docs/plans/archive/: fuzz-suite-plan-2026-07-06.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/decrypt_raw/: v0.aes  v1.aes  v2.aes  v3_empty_iter1.aes  v3_iter1.aes
fuzz/corpus/parsers/: header_v3  v2_ext
fuzz/corpus/stream_decrypt/: v1_stream  v3_stream
fuzz/fuzz_targets/: decrypt_raw.rs  parsers.rs  roundtrip_legacy.rs  roundtrip_v3.rs  stream_decrypt.rs
fuzz/src/: lib.rs
scripts/: package_it.py  package_it_benches.py
src/: aliases.rs  batch_ops.rs  constants.rs  consts.rs  convert.rs  error.rs  header.rs  lib.rs  pbkdf2_builder.rs  utilities.rs  utils.rs
src/aliases/: mod.rs
src/builders/: mod.rs  pbkdf2_builder.rs
src/consts/: mod.rs
src/crypto/: mod.rs  rng.rs
src/crypto/hmac/: mod.rs
src/crypto/kdf/: ackdf.rs  mod.rs  pbkdf2.rs  pbkdf2_builder.rs
src/decryption/: decrypt.rs  mod.rs  read.rs  session.rs
src/decryption/stream/: context.rs  mod.rs  trailer.rs  versions.rs
src/decryptor/: decrypt.rs  mod.rs  read.rs  session.rs
src/decryptor/stream/: context.rs  mod.rs  trailer.rs  utils.rs  versions.rs
src/encryption/: encrypt.rs  mod.rs  session.rs  stream.rs  write.rs
src/encryptor/: encrypt.rs  encrypt_fixed_session.rs  mod.rs  session.rs  stream.rs  write.rs
src/kdf/: ackdf.rs  mod.rs  pbkdf2.rs
tests/: ai_assumptions_tests.rs  batch_ops_tests.rs  builder_tests.rs  common.rs  convert_ext_tests.rs  convert_tests.rs  encrypt_tests.rs  file_ops_tests.rs  header_tests.rs  kdf_tests.rs  specific_kdf_tests.rs  utils_tests.rs  vector_tests.rs
tests/deterministic_encrypt/: encrypt_fixed_session.rs  mod.rs
tests/kdf/: kdf_tests.rs  mod.rs  specific_kdf_tests.rs
tests/test_data/: README.md
tests/test_data/aes_test_files/v0/: v0_test_01.txt.aes  v0_test_02.txt.aes  v0_test_05.txt.aes  v0_test_06.txt.aes  v0_test_09.txt.aes  v0_test_10.txt.aes  v0_test_13.txt.aes  v0_test_15.txt.aes  v0_test_16.txt.aes  v0_test_17.txt.aes  v0_test_18.txt.aes  v0_test_19.txt.aes
tests/test_data/aes_test_files/v1/: v1_test_01.txt.aes  v1_test_05.txt.aes  v1_test_09.txt.aes  v1_test_12.txt.aes  v1_test_13.txt.aes  v1_test_15.txt.aes  v1_test_16.txt.aes
tests/test_data/aes_test_files/v2/: v2_test_07.txt.aes  v2_test_08.txt.aes  v2_test_12.txt.aes  v2_test_13.txt.aes  v2_test_15.txt.aes  v2_test_18.txt.aes  v2_test_19.txt.aes  v2_test_20.txt.aes
tests/test_data/aes_test_files/v3/: v3_deterministic_03.txt.aes  v3_deterministic_04.txt.aes  v3_deterministic_08.txt.aes  v3_deterministic_11.txt.aes  v3_deterministic_16.txt.aes  v3_deterministic_17.txt.aes  v3_deterministic_20.txt.aes  v3_test_07.txt.aes  v3_test_10.txt.aes  v3_test_19.txt.aes
tests/test_data/scripts/: generate_test_files.py  generate_test_files_all_versions.py  generate_v0_test_files.py  generate_v1_test_files.py  generate_v2_test_files.py  generate_v3_test_files.py
tests/vector/: encrypt_fixed_session.rs  mod.rs  vector_tests.rs
tests/vector/data/: README.md  generate_v0_test_files.py  generate_v1_test_files.py  generate_v2_test_files.py  generate_v3_test_files.py
tests/vector/data/aes/v0/: v0_test_11.txt.aes  v0_test_12.txt.aes  v0_test_14.txt.aes  v0_test_20.txt.aes  v0_test_3.txt.aes  v0_test_4.txt.aes  v0_test_8.txt.aes
tests/vector/data/aes/v1/: v1_test_0.txt.aes  v1_test_10.txt.aes  v1_test_14.txt.aes  v1_test_17.txt.aes  v1_test_18.txt.aes  v1_test_19.txt.aes  v1_test_3.txt.aes  v1_test_4.txt.aes  v1_test_7.txt.aes
tests/vector/data/aes/v2/: v2_test_0.txt.aes  v2_test_10.txt.aes  v2_test_11.txt.aes  v2_test_14.txt.aes  v2_test_16.txt.aes  v2_test_17.txt.aes  v2_test_2.txt.aes  v2_test_6.txt.aes  v2_test_9.txt.aes
tests/vector/data/aes/v3/: v3_test_1.txt.aes  v3_test_13.txt.aes  v3_test_9.txt.aes
tests/vector/data/aes_test_files/v0/: v0_test_0.txt.aes  v0_test_7.txt.aes
tests/vector/data/aes_test_files/v1/: v1_test_02.txt.aes  v1_test_11.txt.aes  v1_test_20.txt.aes  v1_test_6.txt.aes  v1_test_8.txt.aes
tests/vector/data/aes_test_files/v2/: v2_test_03.txt.aes  v2_test_04.txt.aes  v2_test_1.txt.aes  v2_test_5.txt.aes
tests/vector/data/aes_test_files/v3/: v3_deterministic_05.txt.aes  v3_test_00.txt.aes  v3_test_12.txt.aes  v3_test_14.txt.aes  v3_test_15.txt.aes  v3_test_18.txt.aes  v3_test_2.txt.aes  v3_test_6.txt.aes
tests/vector/data/scripts/: generate_test_files_all_versions.py  generate_v0_test_files.py  generate_v1_test_files.py  generate_v2_test_files.py  generate_v3_test_files.py
tests/vector/deterministic_encrypt/: encrypt_fixed_session.rs
