# ============================================================================
# FILE: Cargo.toml
# ============================================================================

[package]
name = "aescrypt-rs"
version = "0.2.0"
edition = "2021"
description = "AES Crypt (v0-v3) Rust encryption/decryption library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slurp9187/aescrypt-rs"
documentation = "https://docs.rs/aescrypt-rs"
keywords = ["aes", "crypt", "encryption", "decryption"]
categories = ["cryptography"]

# ----------------------------------------------------------------------
# Runtime dependencies
# ----------------------------------------------------------------------
[dependencies]
aes = "0.8"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.9"
secure-gate = { path = "../secure-gate" }
sha2 = "0.10"
thiserror = "2.0"

[features]
default = ["zeroize", "rand"]
zeroize = ["aes/zeroize", "secure-gate/zeroize", "secure-gate/ct-eq"]
rand = ["secure-gate/rand"]

# ----------------------------------------------------------------------
# Dev / test / bench dependencies
# ----------------------------------------------------------------------
[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ----------------------------------------------------------------------
# Benchmark targets
# ----------------------------------------------------------------------
[[bench]]
name = "kdf"
harness = false

[[bench]]
name = "encrypt"
harness = false

[[bench]]
name = "decrypt"
harness = false

[[bench]]
name = "roundtrip"
harness = false

[[bench]]
name = "iterations"
harness = false

# [[bench]]
# name = "convert_wip"
# harness = false
# required-features = ["batch-ops"]

# ----------------------------------------------------------------------
# Binary (script)
# ----------------------------------------------------------------------
# [[bin]]
# name = "extract_session_data"
# path = "scripts/extract_session_data.rs"
