# ============================================================================
# FILE: Cargo.toml
# ============================================================================

[package]
name = "aescrypt-rs"
version = "0.2.0-dev"
edition = "2024"
rust-version = "1.85"
description = "AES Crypt (v0-v3) Rust encryption/decryption library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slurp9187/aescrypt-rs/tree/v020rc"
documentation = "https://docs.rs/aescrypt-rs"
keywords = ["aes", "crypt", "encryption", "decryption"]
categories = ["cryptography"]
include = [
    "src/**/*.rs",
    "CHANGELOG.md",
    "LICENSE*",
    "README.md",
]


# ----------------------------------------------------------------------
# docs.rs metadata
# ----------------------------------------------------------------------
[package.metadata.docs.rs]
branch = "v020rc"

# ----------------------------------------------------------------------
# Runtime dependencies
# ----------------------------------------------------------------------
[dependencies]
aes = { version = "0.8", features = ["zeroize"] }
hmac = "0.12"
pbkdf2 = "0.12"
# Exact pin on 0.9.0-rc.2; bump deliberately when a newer RC or stable is desired.
secure-gate = { version = "=0.9.0-rc.2", features = ["rand", "ct-eq"] }
sha2 = "0.10"
thiserror = "2.0"

# ----------------------------------------------------------------------
# Dev / test / bench dependencies
# ----------------------------------------------------------------------
[dev-dependencies]
# 0.8.x requires rustc 1.86+; keep 0.7 for rust-version = "1.85".
criterion = { version = "0.7", features = ["html_reports"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ----------------------------------------------------------------------
# Benchmark targets
# ----------------------------------------------------------------------
[[bench]]
name = "kdf"
harness = false

[[bench]]
name = "encrypt"
harness = false

[[bench]]
name = "decrypt"
harness = false

[[bench]]
name = "roundtrip"
harness = false

[[bench]]
name = "iterations"
harness = false

# [[bench]]
# name = "convert_wip"
# harness = false
# required-features = ["batch-ops"]

# ----------------------------------------------------------------------
# Binary (script)
# ----------------------------------------------------------------------
# [[bin]]
# name = "extract_session_data"
# path = "scripts/extract_session_data.rs"
